# python-microservice-template

./: LICENSE  README.md  cookiecutter.json  example-user-config.yaml  shell.nix
.github/workflows/: ci.yaml
hooks/: post_gen_project.sh
{{cookiecutter.project_slug}}/: .dockerignore  .editorconfig  .flake8  .gitignore  Dockerfile  Makefile  README.md  cli.py  docker-compose.yaml  pyproject.toml  shell.nix
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/helm/: Chart.yaml  values.yaml
{{cookiecutter.project_slug}}/helm/templates/: _helpers.tpl  configmap.yaml  database-migration-job.yaml  grpc-server.yaml
{{cookiecutter.project_slug}}/tests/: conftest.py  factory.py  test_dummy.py  utils.py
{{cookiecutter.project_slug}}/tests/grpc/: conftest.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/grpc/: __init__.py  handler.py  server.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/structs/: base.py
